# pdf-tool

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pdf_tool/: __init__.py  backends.py  cli.py  utils.py
src/pdf_tool/commands/: __init__.py  compress_cmd.py  decrypt_cmd.py  delete_cmd.py  docx2pdf_cmd.py  docx_info_cmd.py  docx_merge_cmd.py  docx_text_cmd.py  encrypt_cmd.py  extract_cmd.py  images_cmd.py  info_cmd.py  is_scanned_cmd.py  merge_cmd.py  metadata_cmd.py  ocr_cmd.py  optimize_cmd.py  pdf2docx_cmd.py  preview_cmd.py  rearrange_cmd.py  repair_cmd.py  rotate_cmd.py  split_cmd.py  text_cmd.py  watermark_cmd.py
src/pdf_tool/core/: __init__.py  docx.py  ocr.py  pdf.py
tests/: conftest.py  test_cli.py  test_docx.py  test_parse.py  test_pdf_ops.py
