[project]
name = "pdf-tool"
version = "0.1.0"
description = "A Swiss-army CLI for working with PDFs: split, merge, compress, OCR, optimize, and more."
authors = [{ name = "pdf-tool" }]
requires-python = ">=3.10"
dependencies = [
    "pypdf>=4.0",
    "pikepdf>=8.0",
    "PyMuPDF>=1.23",
    "Pillow>=10.0",
    "rich>=13.0",     # nice tables / progress bars
    "typer>=0.12",    # CLI framework
]

[project.scripts]
pdf-tool = "pdf_tool.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_tool"]
