[project]
name = "pdf-tool"
version = "0.3.0"
description = "A Swiss-army CLI for working with PDFs and MS Word: split, merge, compress, OCR, convert, and more."
authors = [{ name = "pdf-tool" }]
requires-python = ">=3.10"
dependencies = [
    "pypdf>=4.0",
    "pikepdf>=8.0",
    "PyMuPDF>=1.23",
    "Pillow>=10.0",
    "rich>=13.0",     # nice tables / progress bars
    "typer>=0.12",    # CLI framework
    "python-docx>=1.1",  # MS Word .docx read/write
    "cryptography>=3.1",  # enables pypdf AES-256 encryption
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ocr = ["easyocr>=1.7"]

[project.scripts]
pdf-tool = "pdf_tool.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_tool"]
